# TemplateDirectX11

./: .gitignore  .gitmodules  README.md  compileShaderbyHand.ps1
ImGui/: ImGuiMngr.cpp  ImGuiMngr.hpp  imgui_demo.cpp
Source/: App.cpp  CMakeLists.txt  CompileShaders.hpp  DebugInterface.hpp  DeviceResource.cpp  DeviceResource.hpp  Renderer.cpp  Renderer.hpp  TargetWindow.cpp  TargetWindow.hpp  pch.hpp
Source/Hello/: CoreWindow.hpp
Source/ImGui/: ImGuiMngr.cpp  ImGuiMngr.hpp
Source/Shader/: help.txt
Source/Shader/Source/: Func.hlsl  main.hlsl
